--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Norwegian Art Challenge</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <h1>Norwegian Art Challenge</h1>
@@ -12,6 +12,6 @@
     <img id="painting" src="" alt="Norwegian Painting">
     <div id="options"></div>
     <p id="streak">Streak: 0</p>
-    <script src="/assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
