--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Norwegian Art Challenge</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <meta name="description" content="A fun quiz where you guess the artist behind famous Norwegian paintings.">
 </head>
 <body>
     <h1>Norwegian Art Challenge</h1>
     <p>Guess the artist of the painting!</p>
-    <img id="painting" src="" alt="Norwegian Painting">
+    <img id="painting" src="https://upload.wikimedia.org/wikipedia/commons/c/c5/Edvard_Munch%2C_1893%2C_The_Scream%2C_oil%2C_tempera_and_pastel_on_cardboard%2C_91_x_73_cm%2C_National_Gallery_of_Norway.jpg" alt="The Scream by Edvard Munch">
     <div id="options"></div>
     <p id="streak">Streak: 0</p>
-    <script src="./assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
