--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
 <body>
     <div class="container">
         <div class="left">
-            <h1>Art Challenge</h1>
-            <img id="painting" src="" alt="Norwegian Painting" />
+            <h1>Norwegian Art Challenge</h1>
+            <p>Guess the artist of the painting!</p>
+            <img id="painting" src="https://upload.wikimedia.org/wikipedia/commons/c/c5/Edvard_Munch%2C_1893%2C_The_Scream%2C_oil%2C_tempera_and_pastel_on_cardboard%2C_91_x_73_cm%2C_National_Gallery_of_Norway.jpg" alt="The Scream by Edvard Munch">
+            <div id="options"></div>
+            <div id="message"></div>
             <div id="streak-bar"></div>
+            <p id="streak">Streak: 0</p>
         </div>
         <div class="right">
             <div id="options"></div>
