--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
             <div id="message"></div>
         </div>
     </div>
+    <div id="congrats-modal" class="modal" style="display:none;">
+        <div class="modal-content">
+            <h2>Gratulerer!</h2>
+            <p>Du klarte 10 på rad!</p>
+            <button id="reset-btn">Spill igjen</button>
+        </div>
+    </div>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
