--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
 <body>
     <div class="top-bar">
         <span class="title">Kunstquiz</span>
+        <div class="category-selector">
+            <select id="category-select">
+                <option value="all">🎨 Full collection</option>
+                <option value="Popular painters">🎨 Popular painters</option>
+                <option value="Landscapes">🏞️ Landscapes</option>
+                <option value="Portraits">👤 Portraits</option>
+                <option value="Romanticism">🏛️ Romanticism</option>
+                <option value="Expressionism">🖼️ Expressionism</option>
+                <option value="Mountains & Nature">🏔️ Mountains & Nature</option>
+                <option value="Historical/Nationalism">🏰 Historical / Nationalism</option>
+                <option value="1800s">🕰️ 1800s</option>
+                <option value="National Museum of Norway">📍 National Museum of Norway</option>
+                <option value="Women painters">🇳🇴 Women painters</option>
+            </select>
+        </div>
     </div>
     <div class="main-flex">
         <div class="img-col">
