--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div class="top-bar">
         <span class="title">Kunstquiz</span>
+        <span id="collection-info" class="collection-info"></span>
         <div class="category-selector">
             <select id="category-select">
                 <option value="all">Full collection</option>
