--- a/index.html
+++ b/index.html
@@ -50,7 +50,15 @@
       <a href="#" class="social-link">GitHub</a>
       <a href="#" class="social-link">Instagram</a>
       <a href="#" class="social-link">TikTok</a>
+      <a href="#" id="show-artists-link" class="social-link">Artists</a>
     </footer>
+    <div id="artists-modal" class="modal" style="display:none;">
+        <div class="modal-content artist-list-modal">
+            <h2>All Artists</h2>
+            <div id="artist-list-columns"></div>
+            <button id="close-artists-modal">Close</button>
+        </div>
+    </div>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
