artist info updatd

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <div id="options"></div>
             <div id="message"></div>
         </div>
+        <div id="artist-popup-container"></div>
     </div>
     <div id="congrats-modal" class="modal" style="display:none;">
         <div class="modal-content">
