--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
     </div>
     <!-- Modern social footer -->
     <footer class="footer-social">
-      <a href="#" class="social-link">GitHub</a>
-      <a href="#" class="social-link">Instagram</a>
-      <a href="#" class="social-link">TikTok</a>
-      <a href="#" id="show-artists-link" class="social-link">Artists</a>
+      <div class="footer-links">
+        <a href="https://github.com/egil10/kunstquiz" target="_blank" rel="noopener">GitHub</a>
+        <a href="#" class="social-link">Instagram</a>
+        <a href="#" class="social-link">TikTok</a>
+        <a href="#" id="show-artists-link" class="social-link">Artists</a>
+      </div>
     </footer>
     <div id="artists-modal" class="modal" style="display:none;">
         <div class="modal-content artist-list-modal">
