some manual changes

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             <img id="painting" src="https://upload.wikimedia.org/wikipedia/commons/c/c5/Edvard_Munch%2C_1893%2C_The_Scream%2C_oil%2C_tempera_and_pastel_on_cardboard%2C_91_x_73_cm%2C_National_Gallery_of_Norway.jpg" alt="The Scream by Edvard Munch">
             <div id="streak-bar"></div>
         </div>
-        <div class="btn-col">
+        <div class="btn-col" id="btn-col">
             <div id="options"></div>
             <div id="message"></div>
-        </div>
+        </div>        
         <div id="artist-popup-container"></div>
     </div>
     <div id="congrats-modal" class="modal" style="display:none;">
