--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
     <!-- Modern social footer -->
     <footer class="footer-social">
       <div class="footer-links">
-        <a href="https://github.com/egil10/kunstquiz" target="_blank" rel="noopener">GitHub</a>
+        <a href="https://github.com/egil10/kunstquiz" target="_blank" rel="noopener" class="footer-link">GitHub</a>
         <a href="#" class="social-link">Instagram</a>
         <a href="#" class="social-link">TikTok</a>
         <a href="#" id="show-artists-link" class="social-link">Artists</a>
+        <a href="#" id="show-gallery-link" class="footer-link">Gallery</a>
       </div>
     </footer>
     <div id="artists-modal" class="modal" style="display:none;">
@@ -61,6 +62,13 @@
             <div id="artist-list-columns"></div>
             <button id="close-artists-modal">Close</button>
         </div>
+    </div>
+    <div id="gallery-modal" class="modal" style="display:none;">
+      <div class="modal-content gallery-modal-content">
+        <h2>Gallery</h2>
+        <div id="gallery-collage"></div>
+        <button id="close-gallery-modal">Close</button>
+      </div>
     </div>
     <script src="assets/js/script.js"></script>
 </body>
