--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
   <footer class="footer-social">
     <div class="footer-links">
       <a href="https://github.com/egil10/kunstquiz" target="_blank" rel="noopener" class="footer-link">GitHub</a>
-      <a href="#" class="social-link" aria-disabled="true">Instagram (coming soon)</a>
-      <a href="#" class="social-link" aria-disabled="true">TikTok (coming soon)</a>
+      <a href="#" class="social-link" aria-disabled="true">Instagram</a>
+      <a href="#" class="social-link" aria-disabled="true">TikTok</a>
       <a href="#" id="show-artists-link" class="social-link">Artists</a>
       <a href="#" id="show-gallery-link" class="footer-link">Gallery</a>
     </div>
